# eaton-ipp-synology

./: .editorconfig  .gitattributes  .markdownlint.yaml  README.md
.github/workflows/: lint.yml
SynoBuildConf/: build  depends  install
package/: INFO.sh  Makefile
package/conf/: resource
package/conf/systemd/: pkguser-ipp-nut.service  pkguser-ipp.service
package/scripts/: postinst  postupgrade  preupgrade  start-stop-status  update_permissions.sh
package/src/: CMakeLists.txt  ipp_nut_proxy.c  kv_store.c  kv_store.h  nut_client_context.h  nut_handler.c  nut_handler.h  nut_proto.c  nut_proto.h  nut_server.c  nut_server.h  synopoweroff.c  watcher.c  watcher.h
package/ui/: config
package/ui/texts/enu/: strings
